tests/regression/errors/basic/undefined_var_1.csd
// Undefined variable test 1
vibez.spill("Using undefined:", undefined_var_1)
sus result drip = missing_variable + 1
